fix: [CSS] overflow issues on select drop-down boxes

--- a/htwoo-core/src/styles/01-atoms/input/_search.scss
+++ b/htwoo-core/src/styles/01-atoms/input/_search.scss
@@ -6,6 +6,7 @@
   // @extend .hoo-input-group;
   display: flex;
   flex-direction: row;
+  flex-grow: 0;
 
   .hoo-icon {
     background-color: white;
@@ -24,7 +25,7 @@
   .hoo-icon {
     @include input.base-input;
 
-    width: core.px2rem(32px);
+    width: 2rem;
     height: 2rem;
     padding-right: core.px2rem(5px);
     padding-left: core.px2rem(5px);
